2010-08-21  Sam Weinig  <sam@webkit.org>

        Reviewed by Dan Bernstein.

        Remove specialized retain/release functions in favor of a single one for WKTypeRefs
        https://bugs.webkit.org/show_bug.cgi?id=44386

        * MiniBrowser/mac/AppDelegate.m:
        (didRecieveMessageFromInjectedBundle):
        (didNavigateWithNavigationData):
        (-[BrowserAppDelegate init]):
        (-[BrowserAppDelegate applicationWillTerminate:]):
        * MiniBrowser/mac/BrowserStatisticsWindowController.m:
        (-[BrowserStatisticsWindowController initWithThreadedWKContextRef:processWKContextRef:]):
        (-[BrowserStatisticsWindowController dealloc]):
        * MiniBrowser/mac/BrowserWindowController.m:
        (-[BrowserWindowController initWithPageNamespace:]):
        (-[BrowserWindowController fetch:]):
        (-[BrowserWindowController windowWillClose:]):
        (-[BrowserWindowController applicationTerminating]):
        (closePage):
        (runJavaScriptAlert):
        (runJavaScriptConfirm):
        (runJavaScriptPrompt):
        (-[BrowserWindowController updateProvisionalURLForFrame:]):
        * MiniBrowser/mac/WebBundle/WebBundleMain.m:
        (didClearWindowObjectForFrame):
        * MiniBrowser/win/BrowserView.cpp:
        (BrowserView::goToURL):
        * WebKitTestRunner/win/PlatformWebViewWin.cpp:
        (WTR::PlatformWebView::~PlatformWebView):

2010-08-20  Benjamin Poulain  <benjamin.poulain@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        WebKit does not build with Python 2.3
        https://bugs.webkit.org/show_bug.cgi?id=44373

        Replaced the function sorted() by a call to sort()
        on the entry list.
        The function sorted() has been added to Python 2.4.
        The function method sort() of List works with older
        versions of Python.

        * Scripts/create-html-entity-table:

2010-08-20  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Pavel Feldman.
